# multi-objects-detection

./: .env.example  .gitignore  README.md  docker-compose-langfuse.yaml  docker-compose.yaml
hereyouare/: Dockerfile  README.md  langfuse_runtime.py  main.py  package-lock.json  requirements.txt  settings.py
hereyouare-ui/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
hereyouare-ui/src/: App.jsx  index.css
hereyouare/tests/: README.md  conftest.py  test_api.py  test_detection_langfuse_integration.py  test_langfuse_runtime.py
mcp-faq/: Dockerfile  README.md  pyproject.toml
mcp-faq/app/: config.py  faq_loader.py  models.py  retrieval.py  server.py
mcp-faq/knowledge/: delivery.md  hours.md  payment.md
mcp-tasks/: .gitignore  Dockerfile  pyproject.toml
mcp-tasks/app/: config.py  models.py  server.py  store.py
mcp-tasks/app/agents/: __init__.py  info_responder.py  prompts.py  registry.py  schemas.py
mcp-tasks/tests/: conftest.py  test_get_task_payload.py  test_info_agent_mock.py  test_mcp_curl_e2e.py  test_models.py  test_server.py  test_store.py
nginx/conf.d/: default.conf
nginx/ssl/: README.txt  gen-selfsigned.sh
picture-ui/: Dockerfile  README.md  main_pictures.py  requirements.txt
time-ui/: Dockerfile  README.md  main.py  requirements.txt  settings.py
